# A4S_Project

./: Milestone1.txt  STUDENT_README.md  pyproject.toml
A4S_metric_tests/: Lipschitz.py  README.md  analysis.ipynb  income_metric_testing_dataset.pkl  main.py  metric_testing_dataset.pkl  mnist_cnn.pt  model.py  pyproject.toml  requirements.txt  test_dataset.ipynb  train.ipynb
A4S_metric_tests/measures/: initial_local_lipschitz_estimate-adv_examples.csv  initial_local_lipschitz_estimate-well_classified.csv  initial_local_lipschitz_estimate-wrongly_classified.csv  local_lipschitz_estimate-adv_examples-lime-26-16-41.csv  local_lipschitz_estimate-adv_examples-saliency-26-17-3.csv  local_lipschitz_estimate-adv_examples.csv  local_lipschitz_estimate-original_adv_examples-lime-26-16-46.csv  local_lipschitz_estimate-original_adv_examples-saliency-26-17-3.csv  local_lipschitz_estimate-well_classified-lime-26-16-42.csv  local_lipschitz_estimate-well_classified-saliency-26-17-3.csv  local_lipschitz_estimate-well_classified.csv  local_lipschitz_estimate-wrongly_classified-lime-26-16-44.csv  local_lipschitz_estimate-wrongly_classified-saliency-26-17-3.csv  local_lipschitz_estimate-wrongly_classified.csv
A4S_metric_tests/model_training/: model.py  test_dataset.ipynb
a4s_eval/data_model/: evaluation.py
a4s_eval/metric_registries/: data_metric_registry.py
a4s_eval/metrics/model_metrics/: accuracy.py  (+1 more)
a4s_eval/service/: model_functional.py
tests/: run_metrics_test.sh  save_plot.py
tests/data/: income_model.pt  initial_metric_testing_dataset.pkl  metric_testing_dataset.pkl
(+7 files in other folders)
