[project]
name = "mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "captum>=0.8.0",
    "ipykernel>=7.1.0",
    "quantus>=0.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
